<resources>
    <string name="app_name">Aggregate Scan kt</string>

    <string name="open_camera">Open Camera</string>
    <string name="photo_camera">Capture</string>
    <string name="splash_screen">Aggregate Scan</string>
    <string name="main_name">Aggregate Scan</string>

    <string name="take_photo">Take Photo</string>
    <string name="str_folder">Folder</string>
    <string name="str_connect">Connect</string>
    <string name="str_about">About</string>
    <string name="str_default">Default</string>
    <string name="str_target_description">Target</string>

    <string name="str_waiting">Waiting…</string>
    <string name="str_sending">Sending…</string>
    <string name="str_sent">Sent!</string>
    <string name="str_listening">Listening…</string>
    <string name="str_received">Received!</string>
    <string name="str_scan">Scan</string>
    <string name="str_camera">Camera</string>
    <string name="str_status">STATUS</string>

</resources>